# Mana

./: .gitmodules  CLI.cc  CMakeLists.txt  Compiler.cc  Compiler.hh  LICENSE  README.md  Start.cc  expr.mana  test.mana  test.mona  test2.mana
.github/workflows/: cmake-asan-build.yml  cmake-multi-platform.yml  cmake-shared-build.yml  cmake-single-platform.yml  cmake-static-build.yml
AST/: AliasDeclaration.cc  AliasDeclaration.hh  Attribute.cc  Attribute.hh  BinaryExpression.cc  BinaryExpression.hh  BoolLiteralExpression.cc  BoolLiteralExpression.hh  CCAttribute.cc  CCAttribute.hh  CloneContext.hh  ComponentDeclaration.cc  ComponentDeclaration.hh  Declaration.cc  Declaration.hh  EntryDeclaration.cc  EntryDeclaration.hh  EnumDeclaration.cc  EnumDeclaration.hh  ExportQualifier.cc  ExportQualifier.hh  ExposedAttribute.cc  ExposedAttribute.hh  Expression.cc  Expression.hh  FloatLiteralExpression.cc  FloatLiteralExpression.hh  FunctionDeclaration.cc  FunctionDeclaration.hh  FunctionParameter.cc  FunctionParameter.hh  GroupExpression.cc  GroupExpression.hh  IdentifierExpression.cc  IdentifierExpression.hh  ImportDeclaration.cc  ImportDeclaration.hh  IntegerLiteralExpression.cc  IntegerLiteralExpression.hh  LiteralExpression.cc  (+23 more)
CLI/: CLI.cc
Helpers/: Deleted.hh  Macros.hh
Parser/: .Parser.cc.swp  Lexer.cc  Lexer.hh  Parser.cc  Parser.hh
Parser/AST/: Attribute.cc  Attribute.hh  BinaryExpression.cc  BinaryOp.cc  BinaryOp.hh  BoolLiteralExpression.cc  BoolLiteralExpression.hh  CCAttribute.hh  CField.cc  CField.hh  CloneContext.cc  CloneContext.hh  CommaOp.cc  CommaOp.hh  CompDecl.cc  CompDecl.hh  CompFieldDecl.cc  CompFieldDecl.hh  Component.cc  Component.hh  ComponentDecl.cc  ComponentDecl.hh  ComponentDeclaration.cc  ComponentDeclaration.hh  Declaration.cc  Declaration.hh  DivOp.cc  DivOp.hh  EnumDeclaration.cc  ExportQualifier.cc  ExportQualifier.hh  Expr.cc  Expr.hh  FloatLiteralExpression.cc  Fp32Lit.cc  Fp32Lit.hh  Fp64Lit.cc  Fp64Lit.hh  GroupExpression.cc  GroupExpression.hh  (+65 more)
Resolver/: DependencyGraph.cc  DependencyGraph.hh  Resolver.cc  Resolver.hh
SEM/: Component.cc  Component.hh  Expression.cc  Expression.hh  Module.cc  Module.hh  Node.cc  Node.hh  Resolver.cc  Resolver.hh
Test/: test.mana  test2.mana
Utils/: RTTI.cc  RTTI.hh
